# math

./: CMakeLists.txt
src/: AST.cpp  AST.h  CMakeLists.txt  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Simplifier.h  Token.h
tests/: CMakeLists.txt  LexerTests.cpp  ParserTests.cpp  SimplifierTests.cpp
